# omniforge-0.1

./: .gitignore  BUILD_PROGRESS.md  BUILD_SUMMARY.md  CMakeLists.txt  CROPPING_FIXED.md  DASHBOARD_COMPLETE.md  DASHBOARD_GUIDE.md  DEMO_ANALYSIS_REPORT.md  DEMO_GUIDE.md  DEMO_STATUS.md  FINAL_METRICS_REPORT.md  FINAL_REPORT.md  METRICS_REPORT.md  MISSION_COMPLETE.md  PHASE1_COMPLETE.md  PIPELINE_EXPLAINED.md  PRODUCTION_READINESS.md  README.md  README_COMPLETE.md  SOLUTION.md  STATUS.md  build_phase3_waifu2x.ps1  build_production.bat  build_production.ps1  demo_standalone.py  gather_metrics.ps1
docs/: PIPELINE_EXPLAINED_TEXT.md
scripts/: generate_scaffold.ps1
src/: CMakeLists.txt  main.cpp  vulkan_wrapper.h
src/capture/: dxgi_capture.cpp  vulkan_capture.cpp
src/engines/: ncnn_stub.cpp
src/gui/: MainWindow.cpp  MainWindow.h
src/gui/ui/: MainWindow.ui
src/injector/: dllmain.cpp  injector_host.cpp  injector_host.h
src/pipeline/: hybrid_mode.h  upscaler.cpp  upscaler.h
src/utils/: latency_queue.h  metrics.cpp  metrics.h
test_app/: CMakeLists.txt  vulkan_test_app.cpp
tests/: CMakeLists.txt  test_capture_stub.cpp
